--- a/hashtagbot/templates/hashtag_search.html
+++ b/hashtagbot/templates/hashtag_search.html
@@ -10,20 +10,20 @@
             }, 3000);
         }
     </script>
-     <script>
-                    function showLoading() {
-                        alert("درخواست شما درحال پردازش میباشد. لطفاً منتظر بمانید.");
-                    }
+    <script>
+        function showLoading() {
+            alert("درخواست شما درحال پردازش میباشد. لطفاً منتظر بمانید.");
+        }
 
-                    const form = document.querySelector('form');
-                    form.addEventListener('submit', function (event) {
-                        event.preventDefault();
-                        showLoading();
-                        setTimeout(() => {
-                            form.submit();
-                        }, 2000); // زمان منتظر ماندن در ثانیه
-                    });
-                </script>
+        const form = document.querySelector('form');
+        form.addEventListener('submit', function (event) {
+            event.preventDefault();
+            showLoading();
+            setTimeout(() => {
+                form.submit();
+            }, 2000); // زمان منتظر ماندن در ثانیه
+        });
+    </script>
 
     <div class="container" style="display: flex;
                             justify-content: center;
@@ -98,7 +98,10 @@
 
                 {% if error %}
                     <div class="alert alert-danger" role="alert"
-                         style="
+
+
+                    >
+                        <a class="my-button" onclick="location.href='/admin/hashtagbot/worker/'" style="
                         display: inline-block;
                         padding: 10px 50px;
                         background-color: #f1184b;
@@ -110,9 +113,9 @@
                         border-color: #ced4da;
                         margin-top: 30px;
                         margin-bottom: 10px;
+                        cursor: pointer;
+"> {{ error }}</a>
 
-">
-                        {{ error }}
                     </div>
                 {% elif success %}
                     <div class="alert alert-success" role="alert" style="
