--- a/hashtagbot/templates/change_list.html
+++ b/hashtagbot/templates/change_list.html
@@ -5,5 +5,6 @@
 {{ block.super }}
 <li>
     <a href="{% url 'search_hashtag' %}" class="btn btn-high btn-success"> اضافه کردن اکانت با هشتگ</a>
+    <a href="{% url 'account_info_result' %}" class="btn btn-high btn-success">دریافت اطلاعات</a>
 </li>
 {% endblock %}
